Bug 127904 - Focus is taken if cell section dialog is closed
Summary: Focus is taken if cell section dialog is closed
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: bibisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2019-10-01 11:32 UTC by Xisco Faulí
Modified: 2019-10-03 09:08 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-10-01 11:32:49 UTC
Issue found while verifying bug 127262

Steps to reproduce:
1. Open or create calc file.
2. select function data > validity
3. under allow select Cell range
4. in Source push button to select cell range
5. Close the 'Validity: Source' dialog using the X button.

-> The focus is taken and no further action can be done. LibreOffice needs to be killed

Reproduced in

Version: 6.4.0.0.alpha0+
Build ID: 981654f6e0d57c2c6dd1bbf740a6b67941146497
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-10-01 11:34:04 UTC
it might be related to https://git.libreoffice.org/core/commit/ebd37bcc22d0c70cc1e4fdd8e4f3d2f8fc256cd8, it works fine before https://cgit.freedesktop.org/libreoffice/core/commit/?id=8f29d128c52a4f58116fe5474222a929937d0050. Can't check between both commits due to bug 127262

Adding Cc: to Caolán McNamara
Comment 2 Oliver Brinzing 2019-10-01 17:58:29 UTC
i can not reproduce with:

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 66e45a1ae861d50edf65fed9e39c9c9d5b15e0ac
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

a linux only issue?
Comment 3 Commit Notification 2019-10-02 15:15:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6e7d9c4582c05eee47b0b455444e66b4f2445785

Resolves: tdf#127904 modal depth dips below 0

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2019-10-02 15:23:28 UTC
fixed in master, included in updated 6-3 https://gerrit.libreoffice.org/#/c/79612/
Comment 5 Xisco Faulí 2019-10-03 08:57:32 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: c9336bfb6bbf6d73d3f23c124262ade30133448d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 6 Xisco Faulí 2019-10-03 09:08:59 UTC
Fixed backported to 6-3 in 
https://git.libreoffice.org/core/commit/af0c51990e6d0f578f75b72383ce129f52bea859