Resolves: tdf#127904 modal depth dips below 0

when validation dialog is run modally, but changed itself to unmodal
during execution.

only NotifyModalHierarchy on modal<->unmodal transition and not on
modality depth

Change-Id: I85d4f67e5b0426aafbf80b1ae25fc3e3f19717af